config-root/namespaces/nginx/ingress-nginx-nginx-ingress/templates/admission-webhooks/ingress-nginx-admission-valwebhookcfg.yaml
# Source: ingress-nginx/templates/admission-webhooks/validating-webhook.yaml
# before changing this value, check the required kubernetes version
# https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#prerequisites
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    helm.sh/chart: ingress-nginx-3.12.0
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: nginx-ingress
    app.kubernetes.io/version: "0.41.2"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
    gitops.jenkins-x.io/pipeline: 'namespaces'
  name: ingress-nginx-admission
  annotations:
    meta.helm.sh/release-name: 'nginx-ingress'
    kapp.k14s.io/change-group: 'apps.jenkins-x.io/ingress-nginx'
  namespace: nginx
webhooks:
  - name: validate.nginx.ingress.kubernetes.io
    matchPolicy: Equivalent
    rules:
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        namespace: nginx
        name: ingress-nginx-controller-admission
        path: /networking/v1beta1/ingresses
